# internal/transport/http/docs/openapi.json
@@ -165,6 +165,19 @@
             "type": "string",
             "example": "Collect release notes and check migrations"
           },
+          "periodicity": {
+            "type": "string",
+            "enum": ["once", "set_dates", "interval", "monthly", "parity"],
+            "example": "once"
+          },
+          "scheduled_at": {
+            "type": "array",
+            "example": ["2026-03-24T00:00:00Z"]
+          },
+          "frequency": {
+            "type": "integer",
+            "example": 0
+          },
           "status": {
             "type": "string",
             "enum": ["new", "in_progress", "done"],
@@ -184,6 +197,19 @@
             "type": "string",
             "example": "Collect release notes and check migrations"
           },
+          "periodicity": {
+            "type": "string",
+            "enum": ["once", "set_dates", "interval", "monthly", "parity"],
+            "example": "once"
+          },
+          "scheduled_at": {
+            "type": "array",
+            "example": ["2026-03-24T00:00:00Z"]
+          },
+          "frequency": {
+            "type": "integer",
+            "example": 0
+          },
           "status": {
             "type": "string",
             "enum": ["new", "in_progress", "done"],
@@ -199,6 +225,19 @@
           "description": {
             "type": "string",
             "example": "Collect release notes and check migrations"
+          },
+          "periodicity": {
+            "type": "string",
+            "enum": ["once", "set_dates", "interval", "monthly", "parity"],
+            "example": "once"
+          },
+          "scheduled_at": {
+            "type": "array",
+            "example": ["2026-03-24T00:00:00Z"]
+          },
+          "frequency": {
+            "type": "integer",
+            "example": 0
           },
           "status": {
             "type": "string",
