# internal/transport/http/handlers/dto.go
@@ -7,18 +7,24 @@ import (
 )
 
 type taskMutationDTO struct {
-	Title       string            `json:"title"`
-	Description string            `json:"description"`
-	Status      taskdomain.Status `json:"status"`
+	Title       string                 `json:"title"`
+	Description string                 `json:"description"`
+	Periodicity taskdomain.Periodicity `json:"periodicity"`
+	Status      taskdomain.Status      `json:"status"`
+	ScheduledAt []time.Time            `json:"scheduled_at"`
+	Frequency   int64                  `json:"frequency"`
 }
 
 type taskDTO struct {
-	ID          int64             `json:"id"`
-	Title       string            `json:"title"`
-	Description string            `json:"description"`
-	Status      taskdomain.Status `json:"status"`
-	CreatedAt   time.Time         `json:"created_at"`
-	UpdatedAt   time.Time         `json:"updated_at"`
+	ID          int64                  `json:"id"`
+	Title       string                 `json:"title"`
+	Description string                 `json:"description"`
+	Periodicity taskdomain.Periodicity `json:"periodicity"`
+	ScheduledAt []time.Time            `json:"scheduled_at"`
+	Frequency   int64                  `json:"frequency"`
+	Status      taskdomain.Status      `json:"status"`
+	CreatedAt   time.Time              `json:"created_at"`
+	UpdatedAt   time.Time              `json:"updated_at"`
 }
 
 func newTaskDTO(task *taskdomain.Task) taskDTO {
@@ -26,6 +32,8 @@ func newTaskDTO(task *taskdomain.Task) taskDTO {
 		ID:          task.ID,
 		Title:       task.Title,
 		Description: task.Description,
+		Periodicity: task.Periodicity,
+		ScheduledAt: task.ScheduledAt,
 		Status:      task.Status,
 		CreatedAt:   task.CreatedAt,
 		UpdatedAt:   task.UpdatedAt,
